--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <h2>Video Favorit Saya</h2>
         
         <!-- Ganti link sesuai video favorit -->
-        <iframe width="560" height="315">
-            <a href="vidio singkat">
+        <iframe width="560" height="315"
+            a href="vidio singkat">
             frameborder="0"
             allowfullscreen>
         </iframe>
