--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
 </head>
 <body>
 
-    <!-- FOTO DI BAGIAN ATAS -->
-    <section class="hero">
-        <img src="website/background.jpg" alt="background.jpg">
-    </section>
-
-    <!-- HERO / HALAMAN AWAL -->
+    <!-- HERO / HALAMAN PERTAMA -->
     <section class="hero">
         <div class="hero-overlay"></div>
 
@@ -23,13 +18,9 @@
                 Perpustakaan digital modern dengan koleksi informasi
                 untuk mendukung literasi dan pembelajaran.
             </p>
-
             <a href="#" class="btn-hero">Jelajahi Koleksi</a>
         </div>
     </section>
-
-</body>
-</html>
 
 
     <!-- INSTAGRAM -->
