--- a/index.html
+++ b/index.html
@@ -8,20 +8,27 @@
 </head>
 <body>
 
-    <!-- HERO / HALAMAN PERTAMA -->
-    <section class="hero">
-        <div class="hero-overlay"></div>
+<!-- HERO -->
+<section class="hero">
 
-        <div class="hero-content">
-            <h1>Selamat Datang<br>Perpustakaan Azwa</h1>
-            <p>
-                Perpustakaan digital modern dengan koleksi informasi
-                untuk mendukung literasi dan pembelajaran.
-            </p>
-            <a href="#" class="btn-hero">Jelajahi Koleksi</a>
-        </div>
-    </section>
+    <!-- FOTO BACKGROUND -->
+    <img src="website/background.jpg" alt="Background Perpustakaan" class="hero-img">
 
+    <!-- OVERLAY GELAP -->
+    <div class="hero-overlay"></div>
+
+    <!-- KONTEN -->
+    <div class="hero-content">
+        <h1>Selamat Datang<br>Perpustakaan Azwa</h1>
+        <p>
+            Perpustakaan digital modern dengan koleksi informasi
+            untuk mendukung literasi dan pembelajaran.
+        </p>
+        <a href="#" class="btn-hero">Jelajahi Koleksi</a>
+    </div>
+
+</section>
+    
 
     <!-- INSTAGRAM -->
     <section class="instagram">
