--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!-- HERO SECTION -->
 <section class="hero">
-    <h1>Selamat Datang di Perpustakaan Azwa</h1>
+    <h1>Selamat Datang di Azwa Lib</h1>
     <p>Perpustakaan digital modern dengan koleksi informasi untuk mendukung literasi dan pembelajaran.</p>
     <a href="profil.html" class="btn">Lihat Curriculum Vitae</a>
 </section>
