--- a/index.html
+++ b/index.html
@@ -1,46 +1,37 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Azwa Lib - Perpustakaan Digital</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Azwa Lib</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<!-- NAVBAR -->
 <header>
-    <div class="logo">AzwaLib</div>
+    <div class="logo">Azwa Lib</div>
     <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="profil.html">Profil</a></li>
-            <li><a href="#">Layanan</a></li>
-            <li><a href="#">Koleksi</a></li>
-            <li><a href="#">Berita</a></li>
-        </ul>
+        <a href="index.html">Home</a>
+        <a href="profil.html">Profil</a>
+        <a href="#">Layanan</a>
+        <a href="#">Koleksi</a>
+        <a href="#">Berita</a>
     </nav>
 </header>
 
-<!-- HERO SECTION -->
 <section class="hero">
-    <h1>Selamat Datang di Azwa Lib</h1>
+    <h1>Selamat Datang di Perpustakaan Azwa</h1>
     <p>Perpustakaan digital modern dengan koleksi informasi untuk mendukung literasi dan pembelajaran.</p>
     <a href="profil.html" class="btn">Lihat Curriculum Vitae</a>
 </section>
 
-<!-- FOOTER -->
 <footer>
-    <div class="footer-content">
-        <h3>Azwa Lib</h3>
-        <p>Perpustakaan digital modern dengan koleksi informasi untuk mendukung literasi dan pembelajaran.</p>
+    <h3>Azwa Lib</h3>
+    <p>Perpustakaan digital modern dengan koleksi informasi untuk mendukung literasi dan pembelajaran.</p>
 
-        <h4>Jam Operasional</h4>
-        <p>Senin - Jumat: 08.00 - 18.00</p>
-        <p>Sabtu: 09.00 - 17.00</p>
-        <p>Minggu & Libur Nasional: Tutup</p>
-    </div>
+    <h4>Jam Operasional</h4>
+    <p>Senin - Jumat: 08.00 - 18.00</p>
+    <p>Sabtu: 09.00 - 17.00</p>
+    <p>Minggu & Libur Nasional: Tutup</p>
 </footer>
 
 </body>
