--- a/index.html
+++ b/index.html
@@ -2,37 +2,18 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Azwa Lib</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Perpustakaan Azwa</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
+<!-- NAVBAR -->
 <header>
     <div class="logo">Azwa Lib</div>
     <nav>
         <a href="index.html">Home</a>
-        <a href="profil.html">Profil</a>
+        <a href="cv.html">Profil</a>
         <a href="#">Layanan</a>
         <a href="#">Koleksi</a>
-        <a href="#">Berita</a>
-    </nav>
-</header>
-
-<section class="hero">
-    <h1>Selamat Datang di Azwa Lib</h1>
-    <p>Perpustakaan digital modern dengan koleksi informasi untuk mendukung literasi dan pembelajaran.</p>
-    <a href="profil.html" class="btn">Lihat Curriculum Vitae</a>
-</section>
-
-<footer>
-    <h3>Azwa Lib</h3>
-    <p>Perpustakaan digital modern dengan koleksi informasi untuk mendukung literasi dan pembelajaran.</p>
-
-    <h4>Jam Operasional</h4>
-    <p>Senin - Jumat: 08.00 - 18.00</p>
-    <p>Sabtu: 09.00 - 17.00</p>
-    <p>Minggu & Libur Nasional: Tutup</p>
-</footer>
-
-</body>
-</html>
+        <a href="#
