--- a/cv.html
+++ b/cv.html
@@ -53,6 +53,15 @@
         </ul>
     </section>
 
+<!-- PENGALAMAN ORGANISASI-->
+    <section class="card">
+        <h2>Organisasi</h2>
+        <ul>
+            <li>Anggota Organisasi Teater O</li>
+            <li>Anggota Organisasi IMM Sosial Humaniora (Soshum) USU</li>
+        </ul>
+    </section>
+    
     <!-- KONTAK -->
     <section class="card">
         <a href="https://www.instagram.com/azwamuzanni" target="_blank" class="btn">Instagram</a>
