--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <script src="js/script.js"></script>
+<script>
+    checkLogin();
+</script>
 
 <!-- NAVBAR -->
 <header>
@@ -17,7 +21,8 @@
         <a href="#">Layanan</a>
         <a href="#">Koleksi</a>
         <a href="#">Berita</a>
-        <a href="login.html" class="login-btn">Login</a>
+        <a href="#" onclick="logout()" class="login-btn">Logout</a>
+        <a href="contact.html">Contact Us</a>
     </nav>
 </header>
 
