--- a/cv.html
+++ b/cv.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 
+    <script src="js/script.js"></script>
+<script>
+    checkLogin();
+</script>
+    
 <header>
     <div class="logo">Azwa Lib</div>
     <nav>
@@ -16,6 +21,8 @@
         <a href="#">Layanan</a>
         <a href="#">Koleksi</a>
         <a href="#">Berita</a>
+        <a href="contact.html">Contact Us</a>
+<a href="#" onclick="logout()">Logout</a>
     </nav>
 </header>
 
