--- a/login.html
+++ b/login.html
@@ -3,56 +3,28 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login | AzwaLib</title>
+<title>Formulir Pendaftaran | AzwaLib</title>
 <link rel="stylesheet" href="css/style.css">
-<style>
-.toggle-text {
-    margin-top: 15px;
-    cursor: pointer;
-    font-size: 14px;
-    color: #ffd700;
-}
-.hidden {
-    display: none;
-}
-</style>
 </head>
 <body>
 
+<header>
+    <div class="logo">Azwa Lib</div>
+    <nav>
+        <a href="index.html">Home</a>
+    </nav>
+</header>
+
 <div class="form-container">
+    <h2>FORMULIR PENDAFTARAN</h2>
 
-    <!-- LOGIN -->
-    <div id="loginForm">
-        <h2>LOGIN</h2>
+    <input type="text" id="firstName" placeholder="First Name" required>
+    <input type="text" id="lastName" placeholder="Last Name" required>
+    <input type="email" id="email" placeholder="Email" required>
+    <input type="text" id="phone" placeholder="No Handphone" required>
+    <input type="password" id="password" placeholder="Password" required>
 
-        <input type="text" id="loginFirstName" placeholder="First Name">
-        <input type="text" id="loginLastName" placeholder="Last Name">
-        <input type="password" id="loginPassword" placeholder="Password">
-
-        <button class="btn-green" onclick="login()">LOGIN</button>
-
-        <p class="toggle-text" onclick="showRegister()">
-            Belum punya akun? Daftar di sini
-        </p>
-    </div>
-
-    <!-- REGISTER -->
-    <div id="registerForm" class="hidden">
-        <h2>DAFTAR AKUN</h2>
-
-        <input type="text" id="regFirstName" placeholder="First Name">
-        <input type="text" id="regLastName" placeholder="Last Name">
-        <input type="text" id="regPhone" placeholder="No Handphone">
-        <input type="email" id="regEmail" placeholder="Email">
-        <input type="password" id="regPassword" placeholder="Password">
-
-        <button class="btn-green" onclick="register()">DAFTAR</button>
-
-        <p class="toggle-text" onclick="showLogin()">
-            Sudah punya akun? Login di sini
-        </p>
-    </div>
-
+    <button class="btn-green" onclick="register()">DAFTAR / LOGIN</button>
 </div>
 
 <script src="js/script.js"></script>
