--- a/contact.html
+++ b/contact.html
@@ -7,32 +7,33 @@
 </head>
 <body>
 
-<script src="js/script.js"></script>
-<script>
-    checkLogin();
-</script>
-
 <header>
     <div class="logo">Azwa Lib</div>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="cv.html">Profil</a>
+        <a href="home.html">Home</a>
         <a href="contact.html">Contact Us</a>
-        <a href="#" onclick="logout()">Logout</a>
+        <a href="index.html">Logout</a>
     </nav>
 </header>
 
 <div class="contact-container">
     <h2>Contact Us</h2>
 
-    <form onsubmit="event.preventDefault(); kirimPesan();">
-        <input type="email" id="emailContact" placeholder="Email" required>
-        <input type="text" id="phoneContact" placeholder="No Handphone" required>
-        <textarea id="pesan" placeholder="Pesan" required></textarea>
+    <div class="contact-info">
+        <p>Email: azwamuzannilubis@gmail.com</p>
+        <p>Instagram: @azwamuzanni</p>
+        <p>WhatsApp: 08xxxxxxxxxx</p>
+    </div>
 
-        <button type="submit" class="btn-contact">Kirim</button>
-    </form>
+    <h3>Formulir Pesan</h3>
+
+    <input type="text" id="nama" placeholder="Nama">
+    <input type="email" id="emailContact" placeholder="Email">
+    <textarea id="pesan" placeholder="Pesan"></textarea>
+
+    <button class="btn-contact" onclick="kirimPesan()">Kirim</button>
 </div>
 
+<script src="js/script.js"></script>
 </body>
 </html>
