--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Azwa Lib</title>
+    <title>Tani Sejahtera Library</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,7 +14,7 @@
 
 <!-- NAVBAR -->
 <header>
-    <div class="logo">Azwa Lib</div>
+    <div class="logo">Tani Sejahtera Library</div>
     <nav>
         <a href="index.html">Home</a>
         <a href="cv.html">Profil</a>
@@ -28,14 +28,14 @@
 
 <!-- HERO -->
 <section class="hero">
-    <h1>Selamat Datang <br> di Azwa Lib</h1>
-    <p>Perpustakaan digital modern dengan koleksi informasi untuk mendukung literasi dan pembelajaran</p>
+    <h1>Selamat Datang <br> di Tani Sejahtera Library</h1>
+    <p>Selamat datang di Tani Sejahtera Library, pusat literasi dan informasi digital yang hadir untuk mendukung kemajuan dan kesejahteraan petani Karo</p>
     <a href="cv.html" class="btn">Lihat Curriculum Vitae</a>
 </section>
 
 <!-- FOOTER -->
 <footer class="footer">
-    <p>© 2026 Azwa Muzanni Lubis | Azwa Lib</p>
+    <p>© 2026 Azwa Muzanni Lubis | Tani Sejahtera Library</p>
 </footer>
 
 </body>
